--- a/DS_Project/DS_Project.vcxproj.filters
+++ b/DS_Project/DS_Project.vcxproj.filters
@@ -45,7 +45,7 @@
     <ClInclude Include="include\PriorityQueueArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Processor.h">
+    <ClInclude Include="include\Processor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -62,7 +62,7 @@
     <ClCompile Include="src\UI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Processor.cpp">
+    <ClCompile Include="src\Processor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
