--- a/DS_Project/DS_Project.vcxproj
+++ b/DS_Project/DS_Project.vcxproj
@@ -42,7 +42,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -137,17 +137,17 @@
     <ClInclude Include="include\Node.h" />
     <ClInclude Include="include\PriorityQueueArray.h" />
     <ClInclude Include="include\Process.h" />
+    <ClInclude Include="include\Processor.h" />
     <ClInclude Include="include\QueueADT.h" />
     <ClInclude Include="include\Scheduler.h" />
     <ClInclude Include="include\StackADT.h" />
     <ClInclude Include="include\LinkedList.h" />
     <ClInclude Include="include\UI.h" />
-    <ClInclude Include="Processor.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Processor.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Process.cpp" />
+    <ClCompile Include="src\Processor.cpp" />
     <ClCompile Include="src\Scheduler.cpp" />
     <ClCompile Include="src\UI.cpp" />
   </ItemGroup>
