--- a/DS_Project/DS_Project.vcxproj.filters
+++ b/DS_Project/DS_Project.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClInclude Include="Processor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\PriorityQueue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\PriorityQueueADT.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Process.cpp">
