--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,7 @@
                 "-I${workspaceFolder}/DS_Project/include",
                 "${workspaceFolder}/DS_Project/src/*.cpp",
                 "-o",
-                "${workspaceFolder}/DS_Project/bin/main.exe"
+                "${workspaceFolder}/DS_Project/x64/main.exe"
             ],
             "group": {
                 "kind": "build",
