--- a/DS_Project/DS_Project.vcxproj.filters
+++ b/DS_Project/DS_Project.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="include\PriorityQueueADT.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FCFS.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Process.cpp">
@@ -69,6 +72,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Processor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FCFS.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
