--- a/DS_Project/DS_Project.vcxproj
+++ b/DS_Project/DS_Project.vcxproj
@@ -132,8 +132,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="FCFS.h" />
     <ClInclude Include="include\ArrayStack.h" />
+    <ClInclude Include="include\FCFS.h" />
     <ClInclude Include="include\LinkedQueue.h" />
     <ClInclude Include="include\Node.h" />
     <ClInclude Include="include\PriorityQueue.h" />
@@ -142,17 +142,22 @@
     <ClInclude Include="include\Process.h" />
     <ClInclude Include="include\Processor.h" />
     <ClInclude Include="include\QueueADT.h" />
+    <ClInclude Include="include\RR.h" />
     <ClInclude Include="include\Scheduler.h" />
+    <ClInclude Include="include\SJF.h" />
     <ClInclude Include="include\StackADT.h" />
     <ClInclude Include="include\LinkedList.h" />
     <ClInclude Include="include\UI.h" />
+    <ClInclude Include="SJF.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="FCFS.cpp" />
+    <ClCompile Include="src\FCFS.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Process.cpp" />
     <ClCompile Include="src\Processor.cpp" />
+    <ClCompile Include="src\RR.cpp" />
     <ClCompile Include="src\Scheduler.cpp" />
+    <ClCompile Include="src\SJF.cpp" />
     <ClCompile Include="src\UI.cpp" />
   </ItemGroup>
   <ItemGroup>
