--- a/DS_Project/DS_Project.vcxproj.filters
+++ b/DS_Project/DS_Project.vcxproj.filters
@@ -54,7 +54,16 @@
     <ClInclude Include="include\PriorityQueueADT.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="FCFS.h">
+    <ClInclude Include="SJF.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\FCFS.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\SJF.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\RR.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -74,7 +83,13 @@
     <ClCompile Include="src\Processor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="FCFS.cpp">
+    <ClCompile Include="src\FCFS.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\SJF.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\RR.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
